# notes-gpt

./: .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
notes_gpt/: app.py  chat.py  ingest.py  retrieve.py
