[project]
name = "notes-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "openai>=1.0.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.40.0",
]
